--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "indexts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node setupDatabase.ts && node index.ts"
+    "start": "node setupDatabase.js && node index.js"
   },
   "keywords": [],
   "author": "",
